--- a/controllers/products/update.htm
+++ b/controllers/products/update.htm
@@ -1,12 +1,7 @@
 <?php
-
-$uri = explode('/', Request::path());
-
-$delete = (\Indikator\SellProducts\Models\Products::whereId($uri[5])->value('orders') > 0) ? false : true;
-
-$prev = \Indikator\SellProducts\Models\Products::where('id', '<', $uri[5])->max('id');
-$next = \Indikator\SellProducts\Models\Products::where('id', '>', $uri[5])->min('id');
-
+$delete = (\Indikator\SellProducts\Models\Products::whereId($formModel->id)->value('orders') > 0) ? false : true;
+$prev   = \Indikator\SellProducts\Models\Products::where('id', '<', $formModel->id)->max('id');
+$next   = \Indikator\SellProducts\Models\Products::where('id', '>', $formModel->id)->min('id');
 ?>
 
 <?php Block::put('breadcrumb') ?>
@@ -27,7 +22,7 @@ $next = \Indikator\SellProducts\Models\Products::where('id', '>', $uri[5])->min(
             <?= $this->formRenderPrimaryTabs() ?>
         </div>
 
-        <div class="form-buttons">
+        <div class="form-buttons" style="padding: 20px 15px;">
             <div class="loading-indicator-container">
                 <button
                     type="submit"
