--- a/controllers/orders/_list_toolbar.htm
+++ b/controllers/orders/_list_toolbar.htm
@@ -45,20 +45,19 @@
             data-stripe-load-indicator>
             <?= e(trans('indikator.sellproducts::lang.form.status_closed')) ?>
         </button>
+        <button
+            class="btn btn-default oc-icon-times"
+            disabled="disabled"
+            onclick="$(this).data('request-data', {
+                checked: $('.control-list').listWidget('getChecked')
+            })"
+            data-request="onCancelled"
+            data-trigger-action="enable"
+            data-trigger=".control-list input[type=checkbox]"
+            data-trigger-condition="checked"
+            data-stripe-load-indicator>
+            <?= e(trans('indikator.sellproducts::lang.form.status_cancelled')) ?>
+        </button>
     </div>
-    <button
-        class="btn btn-danger oc-icon-trash-o"
-        disabled="disabled"
-        onclick="$(this).data('request-data', {
-            checked: $('.control-list').listWidget('getChecked')
-        })"
-        data-request="onRemove"
-        data-request-confirm="<?= e(trans('indikator.sellproducts::lang.flash.delete')) ?>"
-        data-trigger-action="enable"
-        data-trigger=".control-list input[type=checkbox]"
-        data-trigger-condition="checked"
-        data-stripe-load-indicator>
-        <?= e(trans('system::lang.plugins.remove')) ?>
-    </button>
     <?php endif ?>
 </div>
