--- a/controllers/orders/index.htm
+++ b/controllers/orders/index.htm
@@ -6,9 +6,27 @@
             &nbsp; | &nbsp;
             <span class="text-info"><strong><?= Indikator\SellProducts\Models\Orders::where('status', 4)->count() ?></strong> <?= e(trans('indikator.sellproducts::lang.form.status_paid')) ?></span>
             &nbsp; | &nbsp;
-            <span class="text-success"><strong><?= Indikator\SellProducts\Models\Orders::where('status', 5)->count() ?></strong> <?= e(trans('indikator.sellproducts::lang.form.status_closed')) ?></span> 
+            <span class="text-success"><strong><?= Indikator\SellProducts\Models\Orders::where('status', 5)->count() ?></strong> <?= e(trans('indikator.sellproducts::lang.form.status_closed')) ?></span>
+            &nbsp; | &nbsp;
+            <span class="text-danger"><strong><?= Indikator\SellProducts\Models\Orders::where('status', 6)->count() ?></strong> <?= e(trans('indikator.sellproducts::lang.form.status_cancelled')) ?></span> 
         </li>
     </ul>
 <?php Block::endPut() ?>
 
-<?= $this->listRender() ?>
+<?php if (Indikator\SellProducts\Models\Products::count() > 0): ?>
+    <?= $this->listRender() ?>
+<?php else :?>
+    <div style="padding:0 20px;">
+        <div class="callout callout-warning">
+            <div class="header">
+                <i class="icon-info-circle"></i>
+                <h3><?= e(trans('indikator.sellproducts::lang.list.warning_title')) ?></h3>
+                <?php if (Indikator\SellProducts\Models\Category::count() == 0): ?>
+                <p><a href="<?= Backend::url('indikator/sellproducts/category/create') ?>" style="color:#2F2D26;"><?= e(trans('indikator.sellproducts::lang.list.warning_products')) ?></a></p>
+                <?php else :?>
+                <p><a href="<?= Backend::url('indikator/sellproducts/products/create') ?>" style="color:#2F2D26;"><?= e(trans('indikator.sellproducts::lang.list.warning_orders')) ?></a></p>
+                <?php endif; ?>
+            </div>
+        </div>
+    </div>
+<?php endif; ?>
