--- a/models/products/_price.htm
+++ b/models/products/_price.htm
@@ -1,3 +1,3 @@
 <?php
 
-echo $record->price.' '.Indikator\SellProducts\Models\Category::whereId($record->category)->value('currency');
+echo number_format($record->price, 0, '', ' ').' '.Indikator\SellProducts\Models\Category::whereId($record->category)->value('currency');
